--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>Hello from Flask</title>
-{% if name %}
-  <h1>Hello {{ name }}!</h1>
+{% if response %}
+  <h1>Hello {{ response }}!</h1>
 {% else %}
   <h1>Hello, World!</h1>
 {% endif %}
