--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -17,11 +17,14 @@ body, html {
 }
 
 #time{
-        font-size: 45px;
+        font-size: 95px;
+        padding-top: 50px;
+        margin-bottom: auto;
 }
 
 #day{
-        font-size: 35px;
+        font-size: 45px;
+        margin-top: 0px;
 }
 
 #weather{
