--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Dashboard</title>
 <script type="text/javascript">
-  var IEX_DEBUG_API_KEY = {{ API_KEYS.IEX_DEBUG_API_KEY |tojson }}
+  var IEX_DEBUG_API_KEY = {{ API_KEYS.IEX_DEBUG_API_KEY | tojson }}
 </script>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 <script src="{{ url_for('static', filename='js/script.js') }}"></script>
@@ -25,7 +25,10 @@
       <div class="stock">
         <p class="ticker">{{stock}}</p>
         <p class="price"></p>
-        <p class="percent"></p>
+        <div class="container_arrow">
+          <img class="arrow" src="/static/img/arrow.png">
+          <p class="percent"></p>
+        </div>
       </div>
     {% endfor %}
   </div>
