--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,17 @@
 <div class="fullpage">
   <div class="info">
     <div class="timeandday">
-      <h1 id='time'>time</h1>
-      <h2 id='day'>day</h2>
+      <div class="container" style="display: flex;">
+        <div style="width: 85%;">
+          <h1 id='time'>00:00</h1>
+        </div>
+        <div style="flex-grow: 1;">
+          <h1 id='ampm'>AM</h1>
+        </div>
+    </div>
+      
+      
+      <h2 id='day'>Weekday Month Day</h2>
     </div>
     <div class="weather">
       <i id='weathericon' class="owf owf-803 owf-5x"></i>
